feat: Add markdown language to code block in FlatView block_formatter method

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "python\n",
       "\n",
       "The document below contains all the files in the codebase. For your convenience, this is the structure of the codebase:\n",
-      "```\n",
+      "```bash\n",
       "retromae_pretrain/\n",
       "├── __init__.py\n",
       "├── arguments.py\n",
@@ -25,13 +26,13 @@
       "\n",
       "Below are the contents of all the files in the codebase, separated by '---'.\n",
       "# __init__.py\n",
-      "```\n",
+      "```python\n",
       "\n",
       "```\n",
       "\n",
       "---\n",
       "# arguments.py\n",
-      "```\n",
+      "```python\n",
       "import os\n",
       "from dataclasses import dataclass, field\n",
       "from typing import Optional\n",
@@ -79,7 +80,7 @@
       "\n",
       "---\n",
       "# data.py\n",
-      "```\n",
+      "```python\n",
       "import os\n",
       "import random\n",
       "from copy import deepcopy\n",
@@ -184,7 +185,7 @@
       "\n",
       "---\n",
       "# enhancedDecoder.py\n",
-      "```\n",
+      "```python\n",
       "'''\n",
       "The codes are modified based on huggingface transformers library.\n",
       "'''\n",
@@ -477,7 +478,7 @@
       "\n",
       "---\n",
       "# modeling.py\n",
-      "```\n",
+      "```python\n",
       "import logging\n",
       "import os\n",
       "\n",
@@ -584,7 +585,7 @@
       "\n",
       "---\n",
       "# run.py\n",
-      "```\n",
+      "```python\n",
       "import logging\n",
       "import os\n",
       "import sys\n",
@@ -717,7 +718,7 @@
       "\n",
       "---\n",
       "# trainer.py\n",
-      "```\n",
+      "```python\n",
       "import logging\n",
       "import os\n",
       "from typing import Dict, Optional\n",
@@ -768,7 +769,7 @@
       "\n",
       "---\n",
       "# utils.py\n",
-      "```\n",
+      "```python\n",
       "from typing import List\n",
       "\n",
       "import torch\n",
